fix schema white space

--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -1232,7 +1232,8 @@ main .block .app-store-aTag .app-store-wrapper {
   border: none
 }
 
-main > div[class="section section-wrapper sticky-promo-bar-loadinbody-rounded-container firefly-card-container"] {
+main > div[class="section section-wrapper sticky-promo-bar-loadinbody-rounded-container firefly-card-container"],
+main > div[class="section section-wrapper schemas-container"] {
   padding-top: 0;
 }
 
